Even more rules for `PreferSpecificApiCheck`